Separate github actions builds and add docker build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,41 @@ on:
 
 jobs:
   # Build and test the code
-  build:
+  kotlin:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Cache
+        uses: actions/cache@v2.0.0
+        with:
+          # Cache gradle directories
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          # Key for restoring and saving the cache
+          key: ${{ runner.os }}-java-${{ hashFiles('**/build.gradle.kts', '**/gradle.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-java-
+
+      # Compile the code
+      - name: Compile code
+        run: ./gradlew assemble
+
+      # Gradle check
+      - name: Check
+        run: ./gradlew check
+
+  # Build and test the code
+  node:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -20,10 +54,6 @@ jobs:
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 11
 
       - name: Use Node.js 15
         uses: actions/setup-node@v1
@@ -36,27 +66,35 @@ jobs:
           # Cache gradle directories
           path: |
             ~/.npm
-            ~/.gradle/caches
-            ~/.gradle/wrapper
           # Key for restoring and saving the cache
-          key: ${{ runner.os }}-java-${{ hashFiles('**/build.gradle.kts', '**/gradle.properties', '**/yarn.lock') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-java-
-
-      # Compile the code
-      - name: Compile code
-        run: ./gradlew assemble
-
-      # Gradle check
-      - name: Check
-        run: ./gradlew check
+            ${{ runner.os }}-node-
 
       # Install npm dependencies
       - name: Install NPM dependencies
-        run: cd authorizer-app/ && npm install && cd ..
+        working-directory: ./authorizer-app
+        run: npm install
 
       - name: NPM build
-        run: cd authorizer-app/ && npm run build && cd ..
+        working-directory: ./authorizer-app
+        run: npm run build
 
       - name: NPM test
-        run: cd authorizer-app/ && CHROMIUM_BIN=$(which chrome) npm run test && cd ..
+        working-directory: ./authorizer-app
+        run: CHROMIUM_BIN=$(which chrome) npm run test
+
+  docker:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Build Kotlin docker
+        run: docker build -t radarbase/radar-rest-source-auth-backend:SNAPSHOT -f authorizer-app-backend/Dockerfile .
+
+      - name: Build Node docker
+        run: docker build -t radarbase/radar-rest-source-authorizer:SNAPSHOT authorizer-app
