--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,9 +101,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'src/main/**') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          key: ${{ runner.os }}-buildx
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
