--- a/gradle.properties
+++ b/gradle.properties
@@ -15,13 +15,12 @@
 #
 
 kotlin.code.style=official
-kotlinVersion=1.5.0
+kotlinVersion=1.5.10
 
 okhttpVersion=4.9.1
-radarJerseyVersion=0.6.2-SNAPSHOT
+radarJerseyVersion=0.6.2
 slf4jVersion=1.7.30
 log4j2Version=2.14.1
-logbackVersion=1.2.3
 jerseyVersion=3.0.2
 liquibaseVersion=3.10.2
 junitVersion=5.7.2
