--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           path: |
             ~/.npm
           # Key for restoring and saving the cache
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('authorizer-app/package*.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
