--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,12 +72,18 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v2
         with:
           images: ${{ env.DOCKER_IMAGE_BACKEND }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Docker meta backend
         id: docker_meta_frontend
         uses: crazy-max/ghaction-docker-meta@v2
         with:
           images: ${{ env.DOCKER_IMAGE_FRONTEND }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Build backend docker
         uses: docker/build-push-action@v2
