--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,14 +97,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app/*', 'authorizer-app-backend/src/main/**') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -131,13 +123,29 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Cache frontend layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache-frontend
+          key: ${{ runner.os }}-buildx-frontend-${{ hashFiles('authorizer-app/**') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-frontend-
+
+      - name: Cache backend layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache-backend
+          key: ${{ runner.os }}-buildx-backend-${{ hashFiles('authorizer-app-backend/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app-backend/src/main/**') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-backend-
+
       - name: Build backend docker
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./authorizer-app-backend/Dockerfile
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          cache-from: type=local,src=/tmp/.buildx-cache-backend
+          cache-to: type=local,dest=/tmp/.buildx-cache-backend-new,mode=max
           load: true
           tags: ${{ steps.docker_meta_backend.outputs.tags }}
           # Use runtime labels from docker_meta_backend as well as fixed labels
@@ -153,8 +161,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./authorizer-app
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          cache-from: type=local,src=/tmp/.buildx-cache-frontend
+          cache-to: type=local,dest=/tmp/.buildx-cache-frontend-new,mode=max
           load: true
           tags: ${{ steps.docker_meta_frontend.outputs.tags }}
           # Use runtime labels from docker_meta_backend as well as fixed labels
@@ -165,6 +173,15 @@ jobs:
             org.opencontainers.image.authors=Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
+
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      - name: Move docker build cache
+        run: |
+          rm -rf /tmp/.buildx-cache-*end
+          mv /tmp/.buildx-cache-backend-new /tmp/.buildx-cache-backend
+          mv /tmp/.buildx-cache-frontend-new /tmp/.buildx-cache-frontend
 
       - name: Inspect docker images
         run: |
