--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,6 +84,7 @@ jobs:
         working-directory: ./authorizer-app
         run: CHROMIUM_BIN=$(which chrome) npm run test
 
+  # Build and push tagged release backend docker image
   dockerBackend:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -152,7 +153,7 @@ jobs:
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
 
-      - name: Inspect docker images
+      - name: Inspect docker image
         run: docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
 
       - name: Check docker image
