--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,6 @@ on:
   release:
     types: [published]
 
-env:
-  DOCKER_IMAGE_BACKEND: radarbase/radar-rest-source-auth-backend
-  DOCKER_IMAGE_FRONTEND: radarbase/radar-rest-source-authorizer
-
 jobs:
   uploadBackend:
     # The type of runner that the job will run on
@@ -45,47 +41,42 @@ jobs:
           files: 'authorizer-app-backend/build/distributions/*'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Build and push tagged release docker image
-  docker:
+  # Build and push tagged release backend docker image
+  dockerBackend:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    env:
+      DOCKER_IMAGE: radarbase/radar-rest-source-auth-backend
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Setup docker build environment
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Add Docker labels and tags
-      - name: Docker meta backend
-        id: docker_meta_backend
+      - name: Docker meta
+        id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v2
         with:
-          images: ${{ env.DOCKER_IMAGE_BACKEND }}
+          images: ${{ env.DOCKER_IMAGE }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
 
-      - name: Docker meta backend
-        id: docker_meta_frontend
-        uses: crazy-max/ghaction-docker-meta@v2
-        with:
-          images: ${{ env.DOCKER_IMAGE_FRONTEND }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+      # Setup docker build environment
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Build backend docker
         uses: docker/build-push-action@v2
@@ -94,15 +85,57 @@ jobs:
           file: ./authorizer-app-backend/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.docker_meta_backend.outputs.tags }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
           # Use runtime labels from docker_meta_backend as well as fixed labels
           labels: |
-            ${{ steps.docker_meta_backend.outputs.labels }}
+            ${{ steps.docker_meta.outputs.labels }}
             maintainer=Joris Borgdorff <joris@thehyve.nl>, Nivethika Mahasivam <nivethika@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
             org.opencontainers.image.description=RADAR-base rest sources authorizer backend application
             org.opencontainers.image.authors=Joris Borgdorff <joris@thehyve.nl>, Nivethika Mahasivam <nivethika@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
+
+      - name: Inspect docker image
+        run: |
+          docker pull ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
+          docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
+
+  dockerFrontend:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    env:
+      DOCKER_IMAGE: radarbase/radar-rest-source-authorizer
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Add Docker labels and tags
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: ${{ env.DOCKER_IMAGE }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+
+      # Setup docker build environment
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
 
       - name: Build frontend docker
         uses: docker/build-push-action@v2
@@ -110,22 +143,17 @@ jobs:
           context: ./authorizer-app
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.docker_meta_frontend.outputs.tags }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
           # Use runtime labels from docker_meta_backend as well as fixed labels
           labels: |
-            ${{ steps.docker_meta_frontend.outputs.labels }}
+            ${{ steps.docker_meta.outputs.labels }}
             maintainer=Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
             org.opencontainers.image.description=RADAR-base rest sources authorizer frontend application
             org.opencontainers.image.authors=Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
 
-      - name: Inspect backend image
+      - name: Inspect docker image
         run: |
-          docker pull ${{ env.DOCKER_IMAGE_BACKEND }}:${{ steps.docker_meta_backend.outputs.version }}
-          docker image inspect ${{ env.DOCKER_IMAGE_BACKEND }}:${{ steps.docker_meta_backend.outputs.version }}
-
-      - name: Inspect frontend image
-        run: |
-          docker pull ${{ env.DOCKER_IMAGE_FRONTEND }}:${{ steps.docker_meta_frontend.outputs.version }}
-          docker image inspect ${{ env.DOCKER_IMAGE_FRONTEND }}:${{ steps.docker_meta_frontend.outputs.version }}
+          docker pull ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
+          docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
