--- a/authorizer-app/package.json
+++ b/authorizer-app/package.json
@@ -10,7 +10,7 @@
   "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 8080",
     "build": "ng build",
     "test": "ng test --watch=false",
     "lint": "ng lint",
