--- a/authorizer-app-backend/authorizer.yml
+++ b/authorizer-app-backend/authorizer.yml
@@ -6,7 +6,7 @@ service:
 
 auth:
   # Management Portal URL
-  managementPortalUrl: https://radar-test.thehyve.net/managementportal/
+  managementPortalUrl: https://radar-test.thehyve.net/managementportal
   # OAuth2 Client id of rest source auth application
   clientId: radar_rest_sources_auth
   # OAuth2 Client Secret of rest source auth client
