--- a/authorizer-app/package.json
+++ b/authorizer-app/package.json
@@ -37,6 +37,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "rxjs": "~6.2.0",
+    "sass": "^1.42.1",
     "ts-deepcopy": "^0.1.4",
     "zone.js": "~0.8.26"
   },
@@ -56,7 +57,6 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.14.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
