--- a/authorizer-app/tsconfig.app.json
+++ b/authorizer-app/tsconfig.app.json
@@ -2,10 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [],
-    "resolveJsonModule": true, //already there
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "types": []
   },
   "files": [
     "src/main.ts",
