--- a/authorizer-app/angular.json
+++ b/authorizer-app/angular.json
@@ -92,7 +92,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "styles": [
               "src/styles.scss"
