--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,23 +117,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Cache layers
-        id: cache-buildx
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-backend-${{ hashFiles('authorizer-app-backend/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app-backend/src/main/**') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-backend-
+      # - name: Cache layers
+      #   id: cache-buildx
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: /tmp/.buildx-cache
+      #     key: ${{ runner.os }}-buildx-backend-${{ hashFiles('authorizer-app-backend/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app-backend/src/main/**') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-buildx-backend-
 
-      - name: Cache parameters
-        id: cache-parameters
-        run: |
-          if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
-            echo "::set-output name=cache-to::"
-          else
-            echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
-          fi
+      # - name: Cache parameters
+      #   id: cache-parameters
+      #   run: |
+      #     if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
+      #       echo "::set-output name=cache-to::"
+      #     else
+      #       echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
+      #     fi
 
       - name: Build backend docker
         uses: docker/build-push-action@v2
