--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 kotlin.code.style=official
-kotlinVersion=1.6.0
+kotlinVersion=1.6.10
 
 okhttpVersion=4.9.3
 radarJerseyVersion=0.8.0.1
@@ -25,4 +25,5 @@ jerseyVersion=3.0.3
 liquibaseVersion=3.10.2
 junitVersion=5.8.2
 mockitoKotlinVersion=2.2.0
-jedisVersion=3.7.0
+jedisVersion=3.7.1
+ktlintVersion=0.43.2
