--- a/gradle.properties
+++ b/gradle.properties
@@ -15,14 +15,15 @@
 #
 
 kotlin.code.style=official
-kotlinVersion=1.6.0
+kotlinVersion=1.6.10
 
 okhttpVersion=4.9.3
-radarJerseyVersion=0.8.0.1
+radarJerseyVersion=0.8.1
+radarSchemasVersion=0.7.4
 slf4jVersion=1.7.32
-log4j2Version=2.15.0
+log4j2Version=2.17.0
 jerseyVersion=3.0.3
-liquibaseVersion=3.10.2
 junitVersion=5.8.2
-mockitoKotlinVersion=2.2.0
+mockitoKotlinVersion=4.0.0
 jedisVersion=3.7.0
+radarAuthVersion=0.8.0
