--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - ./docker/etc/rest-source-authorizer/authorizer.yml:/etc/authorizer-app-backend/authorizer.yml
     command: ["authorizer-app-backend", "/etc/authorizer-app-backend/authorizer.yml"]
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "curl", "--fail-with-body", "http://localhost:8080/health"]
       interval: 1m30s
       timeout: 5s
       retries: 3
