--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-          cache-dependency-path: '**/yarn.json'
+          cache-dependency-path: '**/yarn.lock'
 
       # Install npm dependencies
       - name: Install Yarn dependencies
