--- a/authorizer-app/package.json
+++ b/authorizer-app/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8080",
-    "build": "ng build",
+    "build": "ng build --output-path=./dist",
+    "postbuild": "gzipper compress -e ico,png --gzip dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch=false",
     "lint": "ng lint",
@@ -35,6 +36,7 @@
     "@larscom/ngx-translate-module-loader": "^2.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "gzipper": "^7.1.0",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
