--- a/authorizer-app/docker/default.conf
+++ b/authorizer-app/docker/default.conf
@@ -14,7 +14,7 @@ server {
 
     location BASE_HREF {
         alias /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ BASE_HREF/index.html;
     }
 
     # redirect server error pages to the static page /50x.html
