--- a/authorizer-app/package.json
+++ b/authorizer-app/package.json
@@ -14,48 +14,38 @@
     "build": "ng build --output-path=./dist",
     "postbuild": "gzipper compress -e ico,png --gzip dist",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watch=false",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.10",
-    "@angular/cdk": "^12.2.10",
-    "@angular/common": "^12.2.10",
-    "@angular/compiler": "^12.2.10",
-    "@angular/core": "^12.2.10",
-    "@angular/forms": "^12.2.10",
-    "@angular/material": "^12.2.10",
-    "@angular/material-moment-adapter": "^12.2.10",
-    "@angular/platform-browser": "^12.2.10",
-    "@angular/platform-browser-dynamic": "^12.2.10",
-    "@angular/router": "^12.2.10",
-    "@auth0/angular-jwt": "^5.0.2",
+    "@angular/animations": "^13.3.11",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "^13.3.11",
+    "@angular/compiler": "^13.3.11",
+    "@angular/core": "^13.3.11",
+    "@angular/forms": "^13.3.11",
+    "@angular/material": "^13.3.9",
+    "@angular/material-moment-adapter": "^13.3.9",
+    "@angular/platform-browser": "^13.3.11",
+    "@angular/platform-browser-dynamic": "^13.3.11",
+    "@angular/router": "^13.3.11",
+    "@auth0/angular-jwt": "~5.1.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
-    "@larscom/ngx-translate-module-loader": "^2.2.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "gzipper": "^7.1.0",
+    "@larscom/ngx-translate-module-loader": "^3.0.6",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "moment": "^2.29.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.10",
-    "@angular/cli": "~12.2.10",
-    "@angular/compiler-cli": "^12.2.10",
-    "@angular/language-service": "^12.2.10",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "13.3.9",
+    "@angular/cli": "~13.3.9",
+    "@angular/compiler-cli": "^13.3.11",
+    "@angular/language-service": "^13.3.11",
     "@types/node": "~16.11.1",
-    "jasmine-core": "~3.10.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "typescript": "~4.3.5"
+    "gzipper": "^7.1.0",
+    "typescript": "~4.6.4"
   }
 }
