--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,8 +107,10 @@ jobs:
         run: |
           if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
             echo "::set-output name=cache-to::"
+            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache"
           else
             echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
+            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache-new"
           fi
 
       - name: Build backend docker
@@ -136,6 +138,7 @@ jobs:
         with:
           context: ./
           file: ./authorizer-app-backend/Dockerfile
+          cache-from: ${{ steps.cache-parameters.outputs.load-cache-from }}
           load: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
@@ -146,11 +149,6 @@ jobs:
         run: |
           docker run --rm ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }} curl --version
           docker run --rm ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }} authorizer-app-backend --help
-
-      # Push the image on the dev and master branches
-      - name: Push images
-        if: ${{ github.event_name != 'pull_request' }}
-        run: docker push ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
@@ -207,17 +205,20 @@ jobs:
         run: |
           if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
             echo "::set-output name=cache-to::"
+            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache"
           else
             echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
+            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache-new"
           fi
 
       - name: Build frontend docker
         uses: docker/build-push-action@v3
         with:
           context: ./authorizer-app
+          platforms: linux/amd64,linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: ${{ steps.cache-parameters.outputs.cache-to }}
-          load: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           # Use runtime labels from docker_meta as well as fixed labels
           labels: |
@@ -228,13 +229,16 @@ jobs:
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
 
+      - name: Build frontend docker locally
+        uses: docker/build-push-action@v3
+        with:
+          context: ./authorizer-app
+          cache-from: ${{ steps.cache-parameters.outputs.load-cache-from }}
+          load: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+
       - name: Inspect docker image
         run: docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
-
-      # Push the image on the dev and master branches
-      - name: Push images
-        if: ${{ github.event_name != 'pull_request' }}
-        run: docker push ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
