Attempt to fix Snyk test

--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -35,3 +35,4 @@ jobs:
           --fail-on=upgradable
           --org=radar-base
           --severity-threshold=high
+          --policy-path=$GITHUB_WORKSPACE/.snyk
