--- a/.github/workflows/scheduled-snyk.yaml
+++ b/.github/workflows/scheduled-snyk.yaml
@@ -2,6 +2,9 @@ name: Snyk scheduled test
 on:
   schedule:
     - cron: '0 2 * * 1'
+  push:
+    branches:
+      - master
 jobs:
   security:
     runs-on: ubuntu-latest
