Fix frontend trailing slash handling

--- a/authorizer-app/docker/default.conf
+++ b/authorizer-app/docker/default.conf
@@ -8,6 +8,9 @@ server {
     include /etc/nginx/mime.types;
     autoindex off;
 
+    absolute_redirect off;
+    port_in_redirect off;
+
     location / {
         deny all;
     }
