Update dependencies and ktlint fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,14 +15,15 @@
 #
 
 kotlin.code.style=official
-kotlinVersion=1.7.22
-ktlintVersion=0.45.2
+kotlinVersion=1.8.10
+ktlintVersion=0.48.2
 
 okhttpVersion=4.10.0
-radarJerseyVersion=0.10.0-SNAPSHOT
-slf4jVersion=2.0.3
-log4j2Version=2.19.0
-jerseyVersion=3.1.0
-junitVersion=5.9.1
+radarJerseyVersion=0.10.0
+postgresVersion=42.5.4
+slf4jVersion=2.0.6
+log4j2Version=2.20.0
+jerseyVersion=3.1.1
+junitVersion=5.9.2
 mockitoKotlinVersion=4.1.0
 jedisVersion=4.3.1
