--- a/authorizer-app/docker/default.conf
+++ b/authorizer-app/docker/default.conf
@@ -8,14 +8,34 @@ server {
     include /etc/nginx/mime.types;
     autoindex off;
 
-    absolute_redirect off;
-    port_in_redirect off;
+    #absolute_redirect off;
+    #port_in_redirect off;
+
+    #location / {
+    #    deny all;
+    #}
+
+    #location BASE_HREF/ {
+    #    try_files $uri /index.html;
+    #}
+
+    #location ~* \.(eot|ttf|woff|woff2)$ {
+    #    add_header Access-Control-Allow-Origin *;
+    #}
 
     location / {
-        deny all;
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+        try_files $uri /index.html;
     }
 
     location BASE_HREF {
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        add_header 'Access-Control-Expose-Headers' 'Authorization' always;
         alias /usr/share/nginx/html;
         try_files $uri $uri/ BASE_HREF/index.html;
     }
