--- a/docker/etc/rest-source-authorizer/authorizer.yml
+++ b/docker/etc/rest-source-authorizer/authorizer.yml
@@ -29,3 +29,10 @@ restSourceClients:
     clientId: Fitbit-clientid
     clientSecret: Fitbit-clientsecret
     scope: activity heartrate sleep profile
+  - sourceType: Oura
+    authorizationEndpoint: https://cloud.ouraring.com/oauth/authorize
+    tokenEndpoint: https://api.ouraring.com/oauth/token
+    deregistrationEndpoint: https://api.ouraring.com/oauth/revoke
+    clientId: Oura-clientid
+    clientSecret: Oura-clinetsecret
+    scope: daily session heartrate workout tag personal email spo2
