Up image base version to 1.27-alpine3.20-perl

--- a/authorizer-app/Dockerfile
+++ b/authorizer-app/Dockerfile
@@ -10,7 +10,7 @@ COPY ./ /app/
 
 RUN yarn build
 
-FROM nginxinc/nginx-unprivileged:1.24-alpine
+FROM nginxinc/nginx-unprivileged:1.27-alpine3.20-perl
 
 ENV BASE_HREF="/rest-sources/authorizer/" \
     BACKEND_BASE_URL="http://localhost/rest-sources/backend" \
