--- a/docker/etc/rest-source-authorizer/authorizer.yml.template
+++ b/docker/etc/rest-source-authorizer/authorizer.yml.template
@@ -30,6 +30,7 @@ restSourceClients:
   - sourceType: FitBit
     authorizationEndpoint: https://www.fitbit.com/oauth2/authorize
     tokenEndpoint: https://api.fitbit.com/oauth2/token
+    deregistrationEndpoint: https://api.fitbit.com/oauth2/revoke
     clientId: Fitbit-clientid
     clientSecret: Fitbit-clientsecret
     scope: activity heartrate sleep profile
