Publish docker image to GitHub container registry

--- a/authorizer-app/Dockerfile
+++ b/authorizer-app/Dockerfile
@@ -3,10 +3,10 @@ FROM --platform=$BUILDPLATFORM node:18-alpine as builder
 RUN mkdir /app
 WORKDIR /app
 
-COPY package.json yarn.lock /app/
+COPY authorizer-app/package.json authorizer-app/yarn.lock /app/
 RUN yarn install
 
-COPY ./ /app/
+COPY authorizer-app/ /app/
 
 RUN yarn build
 
@@ -23,9 +23,9 @@ ENV BASE_HREF="/rest-sources/authorizer/" \
     RADAR_BASE_URL="http://localhost"
 
 # add init script
-COPY docker/optimization.conf /etc/nginx/conf.d/
-COPY --chown=101 docker/default.conf /etc/nginx/conf.d/
-COPY docker/30-env-subst.sh /docker-entrypoint.d/
+COPY authorizer-app/docker/optimization.conf /etc/nginx/conf.d/
+COPY --chown=101 authorizer-app/docker/default.conf /etc/nginx/conf.d/
+COPY authorizer-app/docker/30-env-subst.sh /docker-entrypoint.d/
 
 WORKDIR /usr/share/nginx/html
 
