--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# Continuous integration, including test and integration test
 name: CI
 
 # Run in master and dev branches and in all pull requests to those branches
@@ -8,50 +7,58 @@ on:
   pull_request:
     branches: [ master, dev ]
 
+env:
+  REGISTRY: ghcr.io
+  REPOSITORY: ${{ github.repository }}
+  IMAGES: >-
+    [{
+    'name': 'authorizer-app-backend',
+    'build_file': 'authorizer-app-backend/Dockerfile',
+    'authors': 'Pauline Conde <pauline.conde@kcl.ac.uk>, Pim van Nierop <pim@thehyve.nl>',
+    'description': 'RADAR-base rest sources authorizer backend application',
+    'cache_keys_files': ['authorizer-app-backend/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app-backend/src/main/**']
+    },{
+    'name': 'authorizer-app',
+    'build_file': 'authorizer-app/Dockerfile',
+    'authors': 'Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>',
+    'description': 'RADAR-base rest sources authorizer frontend application'
+    'cache_keys_files': ['authorizer-app/**']
+    }]
+
 jobs:
-  # Build and test the code
   kotlin:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v5
         with:
           distribution: temurin
           java-version: 17
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Compile code
         run: ./gradlew assemble
 
-      # Gradle check
       - name: Check
         run: ./gradlew check
 
-  # Build and test the code
   node:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
       - name: Use Node.js 18
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
 
-      # Install npm dependencies
       - name: Install Yarn dependencies
         working-directory: ./authorizer-app
         run: yarn install
@@ -60,191 +67,120 @@ jobs:
         working-directory: ./authorizer-app
         run: yarn build
 
-  # Build and push tagged release backend docker image
-  dockerBackend:
-    # The type of runner that the job will run on
+  prepare-matrix:
+    name: Prepare Matrix Output
+    permissions: {}
     runs-on: ubuntu-latest
-
-    env:
-      DOCKER_IMAGE: radarbase/radar-rest-source-auth-backend
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    outputs:
+      images: ${{ steps.step1.outputs.matrix }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Create Matrix Variable
+        id: step1
+        run: echo "matrix=${{ env.IMAGES }}" >> $GITHUB_OUTPUT
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+  docker:
+    needs: prepare-matrix
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        image: ${{ fromJson(needs.prepare-matrix.outputs.images ) }}
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Docker build parameters
+        id: docker_params
+        run: |
+          echo "::set-output name=has_docker_login::${{ secrets.DOCKERHUB_USERNAME != ''  && secrets.DOCKERHUB_TOKEN != '' }}"
+          if [ "${{ github.event_name == 'pull_request' }}" = "true" ]; then
+            echo "::set-output name=push::false"
+            echo "::set-output name=load::true"
+            echo "::set-output name=platforms::linux/amd64"
+          else
+            echo "::set-output name=push::true"
+            echo "::set-output name=load::false"
+            echo "::set-output name=platforms::linux/amd64,linux/arm64"
+          fi
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ matrix.image.name }}-${{ hashFiles(matrix.image.cache_key_files) }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ matrix.image.name }}-
+
+      - name: Cache parameters
+        id: cache-parameters
+        run: |
+          if [ "${{ steps.cache_buildx.outputs.cache-hit }}" = "true" ]; then
+            echo "::set-output name=cache-to::"
+          else
+            echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
+          fi
+
+      - name: Login to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Lowercase image name
+        run: |
+          echo "DOCKER_IMAGE=${REGISTRY}/${REPOSITORY,,}/${{ matrix.image.name }}" >>${GITHUB_ENV}
 
       # Add Docker labels and tags
       - name: Docker meta
         id: docker_meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.DOCKER_IMAGE }}
 
       # Setup docker build environment
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      - name: Cache layers
-        id: cache-buildx
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-backend-${{ hashFiles('authorizer-app-backend/Dockerfile', '**/*.gradle.kts', 'gradle.properties', 'authorizer-app-backend/src/main/**') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-backend-
-
-      - name: Cache parameters
-        id: cache-parameters
-        run: |
-          if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
-            echo "cache-to=" >> $GITHUB_OUTPUT
-            echo "load-cache-from=type=local,src=/tmp/.buildx-cache" >> $GITHUB_OUTPUT
-          else
-            echo "cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max" >> $GITHUB_OUTPUT
-            echo "load-cache-from=type=local,src=/tmp/.buildx-cache-new" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Build backend docker
-        uses: docker/build-push-action@v3
+      - name: Build backend docker and optionally push
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./authorizer-app-backend/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          file: ${{ matrix.image.build_file }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: ${{ steps.cache-parameters.outputs.cache-to }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          # Use runtime labels from docker_meta_backend as well as fixed labels
-          labels: |
-            ${{ steps.docker_meta.outputs.labels }}
-            maintainer=Nivethika Mahasivam <nivethika@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>, Bastiaan de Graaf <bastiaan@thehyve.nl>
-            org.opencontainers.image.description=RADAR-base rest sources authorizer backend application
-            org.opencontainers.image.authors=Nivethika Mahasivam <nivethika@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>, Bastiaan de Graaf <bastiaan@thehyve.nl>
-            org.opencontainers.image.vendor=RADAR-base
-            org.opencontainers.image.licenses=Apache-2.0
-
-      # will use the internal cache from the previous build step, and load it into the current memory
-      - name: Build backend docker locally
-        uses: docker/build-push-action@v3
-        with:
-          context: ./
-          file: ./authorizer-app-backend/Dockerfile
-          cache-from: ${{ steps.cache-parameters.outputs.load-cache-from }}
-          load: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-
-      - name: Inspect docker image
-        run: docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
-
-      - name: Check docker image
-        run: |
-          docker run --rm ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }} curl --version
-          docker run --rm ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }} authorizer-app-backend --help
-
-      # Temp fix
-      # https://github.com/docker/build-push-action/issues/252
-      # https://github.com/moby/buildkit/issues/1896
-      - name: Move docker build cache
-        if: steps.cache-buildx.outputs.cache-hit != 'true'
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  dockerFrontend:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    env:
-      DOCKER_IMAGE: radarbase/radar-rest-source-authorizer
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Add Docker labels and tags
-      - name: Docker meta
-        id: docker_meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.DOCKER_IMAGE }}
-
-      # Setup docker build environment
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Cache frontend layers
-        id: cache-buildx
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-frontend-${{ hashFiles('authorizer-app/**') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-frontend-
-
-      - name: Cache parameters
-        id: cache-parameters
-        run: |
-          if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
-            echo "cache-to=" >> $GITHUB_OUTPUT
-            echo "load-cache-from=type=local,src=/tmp/.buildx-cache" >> $GITHUB_OUTPUT
-          else
-            echo "cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max" >> $GITHUB_OUTPUT
-            echo "load-cache-from=type=local,src=/tmp/.buildx-cache-new" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Build frontend docker
-        uses: docker/build-push-action@v3
-        with:
-          context: ./authorizer-app
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: ${{ steps.cache-parameters.outputs.cache-to }}
-          push: ${{ github.event_name != 'pull_request' }}
+          platforms: ${{ steps.docker_params.outputs.platforms }}
+          load: ${{ steps.docker_params.outputs.load }}
+          push: ${{ steps.docker_params.outputs.push }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           # Use runtime labels from docker_meta as well as fixed labels
           labels: |
             ${{ steps.docker_meta.outputs.labels }}
-            maintainer=Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
-            org.opencontainers.image.description=RADAR-base rest sources authorizer frontend application
-            org.opencontainers.image.authors=Peyman Mohtashami <peyman@thehyve.nl>, Pauline Conde <pauline.conde@kcl.ac.uk>
+            maintainer=${{ matrix.image.authors }}
+            org.opencontainers.image.description=${{ matrix.image.description }}
+            org.opencontainers.image.authors=${{ matrix.image.authors }}
             org.opencontainers.image.vendor=RADAR-base
             org.opencontainers.image.licenses=Apache-2.0
 
-      - name: Build frontend docker locally
-        uses: docker/build-push-action@v3
-        with:
-          context: ./authorizer-app
-          cache-from: ${{ steps.cache-parameters.outputs.load-cache-from }}
-          load: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
+      - name: Pull images
+        if: steps.docker_params.outputs.load == 'false'
+        run: docker pull ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
 
-      - name: Inspect docker image
-        run: docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
+      - name: Inspect docker images
+        run: |
+          docker image inspect ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }}
+          docker run --rm ${{ env.DOCKER_IMAGE }}:${{ steps.docker_meta.outputs.version }} curl --version
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
       # https://github.com/moby/buildkit/issues/1896
       - name: Move docker build cache
-        if: steps.cache-buildx.outputs.cache-hit != 'true'
+        if: steps.cache_buildx.outputs.cache-hit != 'true'
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
